# shiftleft

./: Dockerfile  README.md  pyproject.toml  requirements-reproducibility.txt
.github/workflows/: reproducibility.yml
docs/: REPRODUCTION.md
docs/evidence/: PUBLIC_KEY.asc  README.md  REPRODUCIBILITY_EVIDENCE_PACKAGE.md  REPRODUCIBILITY_EVIDENCE_PACKAGE.md.asc  REPRODUCIBILITY_EVIDENCE_PACKAGE.md.ots
examples/: carry_leakage_demo.py  dom_pipeline_test.py  unmasked_intermediate.py
scripts/: analyze_adams_bridge.py  analyze_opentitan.py  reproduce_paper.py
src/shiftleft/: __init__.py
src/shiftleft/formal/: __init__.py  hamming_weight_verifier.py  modular_hint_verifier.py
src/shiftleft/models/: __init__.py
tests/: __init__.py  test_verifiers.py
