[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shiftleft"
version = "0.1.0"
description = "Pre-silicon side-channel verification for PQC hardware"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Ray Iskander", email = "ray@quarkos.net" }
]
keywords = [
    "side-channel",
    "formal-verification",
    "post-quantum-cryptography",
    "hardware-security",
    "smt",
    "z3",
    "masking",
    "ntt",
    "shift-left",
    "pre-silicon"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://quarkos.net"
Repository = "https://github.com/quarkos-net/shiftleft"
Documentation = "https://github.com/quarkos-net/shiftleft#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/shiftleft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
